[package]
name = "cmessless"
version = "2.0.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
homepage = "https://rodneylab.com"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/cmessless"
description = "A markdown parser to output Astro markup."

# IsTerminal, introduced in Rust 1.70 used in main.rs
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
deunicode = "1.4.3"
miette = "5.10"
nom = { version = "7.1.3", features = ["alloc"] }
notify = "6.1.1"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = "debuginfo"
