[package]
name = "cmessless"
version = "2.0.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
homepage = "https://rodneylab.com"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/cmessless"
description = "A markdown parser to output Astro markup."

# notify 7.0.0 raises msrv to 1.72
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
deunicode = "1.6.0"
markup_fmt = "0.15.1"
miette = "7.1.0"
nom = { version = "7.1.3", features = ["alloc"] }
notify = "7.0.0"
notify-debouncer-mini = { version = "0.5.0", default-features = false }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
strip = "debuginfo"
